--- a/frontend/src/app/pages/perfil-postulante/perfil-postulante.component.css
+++ b/frontend/src/app/pages/perfil-postulante/perfil-postulante.component.css
@@ -484,11 +484,33 @@
 .vacancy-title {
   font-size: 0.84rem;
   font-weight: 700;
+  display: -webkit-box; 
+-webkit-line-clamp: 3; 
+-webkit-box-orient: vertical;
+overflow: hidden; 
+width: 90%;
 }
 
 .vacancy-meta {
   color: var(--text-secondary);
   font-size: 0.74rem;
+  
+}
+
+.vacancy-entreprise {
+  display: -webkit-box; 
+-webkit-line-clamp: 3; 
+-webkit-box-orient: vertical;
+overflow: hidden; 
+width: 90%;
+}
+
+.vacancy-description{
+  display: -webkit-box; 
+-webkit-line-clamp: 3; 
+-webkit-box-orient: vertical;
+overflow: hidden; 
+width: 90%;
 }
 
 .announcement-copy p {
@@ -1006,4 +1028,4 @@
 :host-context(body.dark-theme) .cv-visibility-status--on {
   background: rgba(34, 197, 94, 0.18);
   color: #4ade80;
-}
+}
